# AudioSummarizer

./: .gitignore  README.md  docker-compose.yml  shell.nix
configs/: s3.example.env
migrations/: 000001_init.up.sql
notify/: Dockerfile  main.py  pyproject.toml
notify/configs/: config.py  kafka.example.env  s3.example.env
notify/internal/kafka/: kafka.py
notify/internal/s3/: s3.py
rest-api-server/: Dockerfile  go.mod  go.sum  main.py  pyproject.toml
rest-api-server/cmd/rest-api-server/: main.go
rest-api-server/configs/: kafka.example.env  s3.example.env
rest-api-server/core/settings/: settings.py
rest-api-server/internal/config/: config.go
rest-api-server/internal/database/: kafka.go  postgres.go  s3.go
rest-api-server/internal/databases/: queries.py  schema.py
rest-api-server/internal/databases/postgres/: connection.py
rest-api-server/internal/handler/: audio.go  handler.go  user.go
rest-api-server/internal/kafka/: kafka.py
rest-api-server/internal/repository/: audio.go  repository.go  user.go
rest-api-server/internal/router/: router.go
rest-api-server/internal/s3/: s3_client.py
rest-api-server/internal/server/: server.go
rest-api-server/internal/service/: audio.go  service.go  user.go
rest-api-server/routers/: router.py  summarise.py
summirizer/: main.py  pyproject.toml
summirizer/configs/: postgres.example.env  s3.example.env
summirizer/internal/: llm.py  summirizer.py  summirizer_llm.py
summirizer/internal/database/: postgres.py  queries.py  schema.py
summirizer/internal/kafka/: kafka.py
summirizer/internal/s3/: s3.py
telegram_file_service/: Dockerfile  docker-compose.yml  pyproject.toml
telegram_file_service/src/bot/: api_client.py  config.py  handlers.py
telegram_file_service/src/notify/: worker.py
telegram_file_service/src/telegram_file_service/: app.py  create_bot.py  polling.py  webhook.py
transcriber/: Dockerfile  pyproject.toml
transcriber/configs/: config.py  kafka.example.env  s3.example.env
transcriber/internal/: transcriber.py
transcriber/internal/database/: postgres.py  queries.py
transcriber/internal/kafka/: kafka.py
transcriber/internal/s3/: s3.py
