[project]
name = "notify"
version = "0.1.0"
description = ""
authors = [
    {name = "isOdin-l",email = "ivanbildagin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
