[project]
name = "rest-api-server"
version = "0.1.0"
description = ""
authors = [
    {name = "isOdin",email = "ivanbildagin@mail.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.121.2,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "minio (>=7.2.18,<8.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
