[project]
name = "transcriber"
version = "0.1.0"
description = ""
authors = [
    {name = "isOdin-l",email = "ivanbildagin@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "aiokafka (>=0.12.0,<0.13.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "modelscope (>=1.33.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
